edited linkedin link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h1 style="color: rgb(150, 83, 0);">Social Media</h1>
         <div class="flex p-[20px] pb-10 gap-5">
             <a href="https://www.instagram.com/tianhd_/" target="_blank"><img class="w-[90px] h-[90px]  hover:w-[100px] hover:h-[100px] " src="https://png.pngtree.com/png-vector/20221018/ourmid/pngtree-instagram-icon-png-image_6315974.png" alt="instagram"></a>
-            <a href="https://linkedin.com/christianhadiwijaya" target="_blank"><img class="w-[90px] h-[90px]  hover:w-[100px] hover:h-[100px]" src="static/assets/linkedin.png"></a>
+            <a href="https://linkedin.com/in/christianhadiwijaya" target="_blank"><img class="w-[90px] h-[90px]  hover:w-[100px] hover:h-[100px]" src="static/assets/linkedin.png"></a>
             <a href="https://github.com/tianrider" target="_blank"><img class="w-[90px] h-[90px]  hover:w-[100px] hover:h-[100px]" src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github"></a>
         </div>
     </div>
