fixed css problem

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christian Hadiwijaya</title>
 
-    <link href="/src/input.css" rel="stylesheet">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="src/input.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
 </head>
 <body>
     <div class="flex flex-row items-center justify-evenly">
