--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="static/assets/ch.png" alt="logo" class="logo">
+        <img src="../static/assets/ch.png" alt="logo" class="logo">
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="#aboutmelink">About Me</a></li>
@@ -26,7 +26,7 @@
             <h3 class="text-amber-900 italic"><i>Undergraduate Computer Engineering Student</i></h3>
         </div>
         <div class="profile_picture">
-            <img class="object-cover mt-[50px] align-middle" src="static/assets/Profile_Picture-removebg-preview.png" alt="profile picture">
+            <img class="object-cover mt-[50px] align-middle" src="../static/assets/Profile_Picture-removebg-preview.png" alt="profile picture">
         </div>
     </div>
 
