--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                         ></textarea> 
                 </div>
 
-                <div class="button w-5">
-                    <button id="Send" class="w-32">Send</button>
+                <div class="button">
+                    <button id="Send">Send</button>
                 </div>
                     
             </form>
